[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cherrypick"
version = "0.1.0"
description = "Unattended paper-trading orchestrator + reporting hub for the Cherrypick trading suite (drives MEICAgent / EarningsAgent in place). Imports as the cherrypick namespace package."
readme = "ROADMAP.md"
requires-python = ">=3.10"
authors = [{ name = "Jon Covington", email = "jon.covington@gmail.com" }]
keywords = ["trading", "options", "orchestrator", "paper-trading", "cherrypick"]
# License intentionally unset until the suite's licensing is decided (all rights reserved by default).
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
# cherrypick-core supplies the `cherrypick.core` namespace that report/calibrate/dashboard import.
# In a source checkout it's the `src/_core` submodule (bootstrapped onto sys.path, and excluded from
# the wheel); a real install (wheel / `pip install git+…` / pipx) has no submodule, so it's declared
# here as a direct git reference — allowed because cherrypick-core is Private :: Do Not Upload (not on
# PyPI). Editable/source installs still resolve core from the submodule, which is inserted at sys.path[0]
# and wins over this copy.
dependencies = [
    "keyring>=24",
    # zoneinfo needs an IANA tz database; Windows (this suite's target) ships none, so tzdata supplies
    # it for an installed copy. pytz remains a call-time fallback (see orchestrator/timeutil._tz).
    "tzdata>=2023",
    "pytz>=2023",
    "cherrypick-core @ git+https://github.com/joncovington/cherrypick-core.git",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

# `pipx install cherrypick` (or an editable install) exposes the `cherrypick` command; the in-place
# root cherrypick.py launcher stays for source-checkout / scheduler use.
[project.scripts]
cherrypick = "cherrypick.cli:main"

[project.urls]
Repository = "https://github.com/joncovington/cherrypick"

[tool.setuptools.packages.find]
# src layout + PEP 420 native namespace: `cherrypick` has no __init__.py, so it composes with the
# cherrypick.core distribution under one `cherrypick.*` import namespace. The cherrypick-core submodule
# lives at src/_core and is bootstrapped onto sys.path at runtime — never packaged into this wheel.
where = ["src"]
include = ["cherrypick*"]
exclude = ["_core*"]
namespaces = true

[tool.ruff]
line-length = 110
target-version = "py310"
# src/_core is the cherrypick-core submodule — it carries its own ruff config and CI; never lint it here.
extend-exclude = ["src/_core"]

[tool.ruff.lint]
# Match the suite's ruff profile (see cherrypick-core): E/W pycodestyle, F pyflakes, I import-sorting,
# UP pyupgrade, B bugbear.
select = ["E", "F", "I", "W", "UP", "B"]
